--- a/index.html
+++ b/index.html
@@ -1,17 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
+    <h1>ANASTASIA BLINOVA<h1>
 
-<h1>ANASTASIA BLINOVA<h1>
+    <h2><strong>Education</strong></h2>
+    <p>
+        <strong>Name of the Education Establishment:</strong>MINSK STATE LINGUISTIC UNIVERSITY<br>
+        <strong>Faculty/College:</strong>English Pedagogical<br>
+        <strong>Department:</strong>English<br>
+        <strong> Specialty:</strong>Foreign Literature<br>
+        <strong>Degree (diploma): </strong>Bachelor
+    </p>
+    <h2>Summary</h2>
 
-</h2>Education</h2>
-<p>
-Name of the Education Establishment:** MINSK STATE LINGUISTIC UNIVERSITY
-Faculty/College:** English Pedagogical
-Department:** English
-Specialty:** Foreign Literature
-Degree (diploma):** Bachelor
-</p>
+    <p>
+Software Testing Engineer with more then 4 years experience<br>
+1. Experience in Function and Domain Testing; GUI Testing; Usability testing; Compatibility Testing; Module and Integration testing; Risk based Testing; Exploratory testing<br>
+2. Experience in working with such SDM as Scrum<br>
+3. QA activities<br>
+•	Requirements/User stories analysis<br>
+•	Test-Cases/Check-lists writing according user stories<br>
+•	run Test-Cases<br>
+•	Bug Reporting in JIRA and Azure DevOps<br>
+•	Participation in project meeting<br>
+•	Communication with project team and customer<br>
+•	creation Test Result Report<br>
+•	DateBase/PostgreSQL<br>
+4. Mentoring of newcomers on the project<br>
+5. I'm responsible person with positive attitude to work, striving for self-development, have good communication skills and problem solving skills
+    </p>
+    <h2>CERTIFICATES</h2>
+    <p>
+        <strong>EPAM:</strong> AI Literacy Program, 2024<br>
+        <strong>Tricentis:</strong> Tricentis Tosca Fundamentals − Automating web application testing (AS1), 2023
+    </p>
 
+    <h2> SKILLS</h2>
+    <p>
+<strong>Engineering Practices</strong> <br>
+- DWH fundamentals<br>
+- Static Code Analysis<br>
+- Test Strategy<br>
+- Version Control<br>
+- Requirements Analysis<br>
+- Estimation and Work Planning<br>
+
+<strong> Technical Skills</strong><br>
+- Testing: Functional Testing, Automated Testing in JS, Regression Testing, Exploratory Testing<br>
+- Test Design: Test Strategy Development, Test Plan Development, Test Cases Development, Risk-Based Testing<br>
+- Automation: Test Automation Framework Architecture in JS, Testing Automation Basics<br>
+
+<strong> Leadership & Soft Skills</strong><br>
+- Communication, Teamwork, Adaptability, Problem-solving<br>
+
+<strong>Management</strong> <br>
+- Scrum, Agile, Kanban<br>
+
+    <strong>Technologies</strong><br>
+- Platforms: SAP Fiori, Amazon Web Services<br>
+- Standards: Git<br>
+- Frameworks: WebdriverIO, Test Runners in JS<br>
+- Languages: JavaScript, SQL<br>
+- Tools: Azure DevOps Server, Selenium, Jira, Tricentis Tosca, DBeaver<br>
+
+<strong>Languages </strong><br>
+- English: B2<br>
+- German: A1
+    </p>
+    
 </body>
 </html>
+
+
