docs: fill html1

--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@ Software Testing Engineer with more then 4 years experience<br>
 - English: B2<br>
 - German: A1
     </p>
+
+    <h2> Work Experience</h2>
+    <p>
+<strong> Jan-2024 - Oct-2024 - EPAM Systems</strong>
+
+<strong>Project Roles:</strong> Tester
+<strong>Client:</strong> Priceline.com
+
+<strong>vResponsibilities:</strong>
+•	Requirement analysis in RTR (Finance) stream
+•	Test case and test cycle creation in Zephyr Scale
+•	Performing  Functional  Testing (SAP Fiori, SAP GUI)
+•	Interface testing (Serengeti, MDG)
+•	Analyzing and reporting defects using JIRA (Zephyr  Scale)
+•	Client support with GLSU installation and configuration on AWS
+•	User guide creation on Confluence
+•	Client teams supporting during UAT
+•	Preparation of end-to-end test scenarios for SIT phase
+•	Tools and Technologies
+•	SAP GUI, SAP Fiori, SAP, Zephyr plug-in for JIRA, Jira
+•	Team
+•	Testing team: 3 testes, 9 SAP Consultants
+    </p>
     
 </body>
 </html>
