docs: fill html 2

--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@ Software Testing Engineer with more then 4 years experience<br>
 
     <h2> Work Experience</h2>
     <p>
-<strong> Jan-2024 - Oct-2024 - EPAM Systems</strong>
+<strong> Jan-2024 - Oct-2024 - EPAM Systems</strong><br>
 
-<strong>Project Roles:</strong> Tester
-<strong>Client:</strong> Priceline.com
+<strong>Project Roles:</strong> Tester<br>
+<strong>Client:</strong> Priceline.com<br>
 
-<strong>vResponsibilities:</strong>
-•	Requirement analysis in RTR (Finance) stream
-•	Test case and test cycle creation in Zephyr Scale
-•	Performing  Functional  Testing (SAP Fiori, SAP GUI)
-•	Interface testing (Serengeti, MDG)
-•	Analyzing and reporting defects using JIRA (Zephyr  Scale)
-•	Client support with GLSU installation and configuration on AWS
-•	User guide creation on Confluence
-•	Client teams supporting during UAT
-•	Preparation of end-to-end test scenarios for SIT phase
-•	Tools and Technologies
-•	SAP GUI, SAP Fiori, SAP, Zephyr plug-in for JIRA, Jira
-•	Team
-•	Testing team: 3 testes, 9 SAP Consultants
+<strong>Responsibilities:</strong><br>
+•	Requirement analysis in RTR (Finance) stream<br>
+•	Test case and test cycle creation in Zephyr Scale<br>
+•	Performing  Functional  Testing (SAP Fiori, SAP GUI)<br>
+•	Interface testing (Serengeti, MDG)<br>
+•	Analyzing and reporting defects using JIRA (Zephyr  Scale)<br>
+•	Client support with GLSU installation and configuration on AWS<br>
+•	User guide creation on Confluence<br>
+•	Client teams supporting during UAT<br>
+•	Preparation of end-to-end test scenarios for SIT phase<br>
+•	Tools and Technologies<br>
+•	SAP GUI, SAP Fiori, SAP, Zephyr plug-in for JIRA, Jira<br>
+•	Team<br>
+•	Testing team: 3 testes, 9 SAP Consultants<br>
     </p>
     
 </body>
