--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>ANASTASIA BLINOVA</h1> 
-
     <h2><strong>Education</strong></h2>
     <p>
         <strong>Name of the Education Establishment:</strong> MINSK STATE LINGUISTIC UNIVERSITY<br>
@@ -17,7 +16,6 @@
         <strong>Specialty:</strong> Foreign Literature<br>
         <strong>Degree (diploma):</strong> Bachelor
     </p>
-
     <h2>Summary</h2>
     <p>
         Software Testing Engineer with more than 4 years experience<br>
@@ -35,13 +33,11 @@
         4. Mentoring of newcomers on the project<br>
         5. I'm a responsible person with a positive attitude to work, striving for self-development, have good communication skills and problem-solving skills.
     </p>
-
     <h2>CERTIFICATES</h2>
     <p>
         <strong>EPAM:</strong> AI Literacy Program, 2024<br>
-        <strong>Tricentis:</strong> Tricentis Tosca Fundamentals − Automating web application testing (AS1), 2023
+        <strong>Tricentis:</strong> Tricentis Tosca Fundamentals - Automating web application testing (AS1), 2023
     </p>
-
     <h2>SKILLS</h2>
     <p>
         <strong>Engineering Practices</strong><br>
@@ -74,7 +70,6 @@
         - English: B2<br>
         - German: A1
     </p>
-
     <h2>Work Experience</h2>
     <p>
         <strong>Jan-2024 - Oct-2024 - EPAM Systems</strong><br>
