fix: fix other bug

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         - Test Design: Test Strategy Development, Test Plan Development, Test Cases Development, Risk-Based Testing<br>
         - Automation: Test Automation Framework Architecture in JS, Testing Automation Basics<br>
 
-        <strong>Leadership & Soft Skills</strong><br>
+        <strong>Leadership and Soft Skills</strong><br>
         - Communication, Teamwork, Adaptability, Problem-solving<br>
 
         <strong>Management</strong><br>
