fix: fix a bug with trailing whitespace

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ANASTASIA BLINOVA</h1> 
+    <h1>ANASTASIA BLINOVA</h1>
     <h2><strong>Education</strong></h2>
     <p>
         <strong>Name of the Education Establishment:</strong> MINSK STATE LINGUISTIC UNIVERSITY<br>
@@ -31,7 +31,7 @@
         • Creation of Test Result Report<br>
         • Database/PostgreSQL<br>
         4. Mentoring of newcomers on the project<br>
-        5. I'm a responsible person with a positive attitude to work, striving for self-development, have good communication skills and problem-solving skills.
+        5. I'm a responsible person with a positive attitude to work, striving for self-development, have good communication skills and problem-solving skills
     </p>
     <h2>CERTIFICATES</h2>
     <p>
